unpackaged/main/default/objects/SDO_Platform_Events_Page__c/SDO_Platform_Events_Page__c.object-meta.xml
<CustomObject>
    <description>What: Platform Events Page object.</description>
    <label>Platform Events Page</label>
    <nameField>
        <label>Platform Event Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>