unpackaged/main/default/objects/SDO_Platform_Events_Page__c/fields/Background_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_URL__c</fullName>
    <label>Background URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>